--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,9 +4,9 @@ parts = test py
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.keyreference [test]
+eggs = zope.keyreference [test]
 
 [py]
 recipe = zc.recipe.egg
-eggs = zope.app.keyreference
+eggs = zope.keyreference
 interpreter = py
