--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,9 @@
 [buildout]
 develop = .
+find-links =
+    ${buildout:directory}/ZODB-4.0.0dev.tar.gz
 parts = test py
+versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
@@ -10,3 +13,6 @@ eggs = zope.keyreference [test]
 recipe = zc.recipe.egg
 eggs = zope.keyreference
 interpreter = py
+
+[versions]
+ZODB = 4.0.0dev
