--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
-    py26,py27,py33,py34
+#   pypy3 blocked on PyPy3-compatible zodbpickle
+#   py26,py27,py33,py34,pypy,pypy3
+    py26,py27,py33,py34,pypy
 
 [testenv]
 commands =
