--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ python:
     - 3.3
     - 3.4
     - pypy
-#   pypy3 blocked on PyPy3-compatible zodbpickle
-#   - pypy3
+    - pypy3
 install:
     - pip install .
     - pip install zope.keyreference[test]
 script:
-    - python setup.py test -q
+    - python setup.py -q test -q
 notifications:
     email: false
