--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,pypy,pypy3
+    py27,
+    py33,
+    py34,
+    py35,
+    pypy,
+    pypy3
 
 [testenv]
 commands =
