Try a suggestion of @jamadden to get Python 3.5 and 3.6 running on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ python:
     - pypy
     - pypy3
 install:
-    - pip install .
-    - pip install zope.keyreference[test]
+    - pip install .[test]
 script:
     - python setup.py -q test -q
 notifications:
