Try to fix PyPy and PyPy3.
They seem to have a buffering problem with the previous approach.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
     - 3.6
     - pypy
     - pypy3
+install:
+    - python setup.py install
 script:
     - python setup.py -q test -q
 notifications:
