--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
     - pypy
     - pypy3
 install:
-    - bin/pip install -e .[test]
+    - pip install -e .[test]
 script:
     - python setup.py -q test -q
 notifications:
