--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     pypy3
 
 [testenv]
+usedevelop = true
 commands =
     python setup.py -q test -q
 # without explicit deps, setup.py test will download a bunch of eggs into $PWD
