--- a/tox.ini
+++ b/tox.ini
@@ -12,12 +12,5 @@ envlist =
 usedevelop = true
 commands =
     python setup.py -q test -q
-# without explicit deps, setup.py test will download a bunch of eggs into $PWD
-# (and it seems I can't use zope.dottedname[testing] here, so forget DRY)
 deps =
-    ZODB
-    zope.component
-    zope.i18nmessageid
-    zope.interface
-    zope.schema
-    zope.testing
+    .[test]
