Add support for Python 3.6. (#5)
* Add support for Python 3.6 and fix Travis CI.
* Ignore derived.
* Make .travis.yml DRY.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ python:
     - 3.3
     - 3.4
     - 3.5
+    - 3.6
     - pypy
     - pypy3
 install:
-    - pip install .
-    - pip install zope.keyreference[test]
+    - pip install -e .[test]
 script:
     - python setup.py -q test -q
 notifications:
