--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,pypy,pypy3
+    py27,
+    py33,
+    py34,
+    py35,
+    py36,
+    pypy,
+    pypy3
 
 [testenv]
+usedevelop = true
 commands =
     python setup.py -q test -q
-# without explicit deps, setup.py test will download a bunch of eggs into $PWD
-# (and it seems I can't use zope.dottedname[testing] here, so forget DRY)
 deps =
-    ZODB
-    zope.component
-    zope.i18nmessageid
-    zope.interface
-    zope.schema
-    zope.testing
+    .[test]
