Add coveralls and a coverage environment.
Currently only at 67% coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,18 @@ envlist =
     pypy3
 
 [testenv]
-usedevelop = true
 commands =
-    python setup.py -q test -q
+    zope-testrunner --test-path=src []
 deps =
     .[test]
+
+[testenv:coverage]
+usedevelop = true
+basepython =
+    python3.6
+commands =
+    coverage run -m zope.testrunner --test-path=src []
+    coverage report --fail-under=67
+deps =
+    {[testenv]deps}
+    coverage
