--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-sudo: false
 python:
     - 2.7
     - 3.4
@@ -11,10 +10,15 @@ matrix:
     include:
         - python: 3.7
           dist: xenial
-          sudo: true
+
 install:
-    - pip install -e .[test]
+    - pip install -U pip setuptools
+    - pip install -U coverage coveralls
+    - pip install -U -e .[test]
 script:
-    - python setup.py -q test -q
+    - coverage run -m zope.testrunner --test-path=src
+after_success:
+    - coveralls
 notifications:
     email: false
+cache: pip
