Fix MANIFEST.in per check-manifest.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,8 @@ include .coveragerc
 recursive-include src *
 
 global-exclude *.pyc
+
+# added by check_manifest.py
+recursive-include doc *.py
+recursive-include doc *.rst
+recursive-include doc Makefile
