--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,16 +1,19 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+include *.md
 include *.rst
 include *.txt
-include *.py
 include buildout.cfg
 include tox.ini
-include .travis.yml
-include .coveragerc
 
-recursive-include src *
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs *.txt
+recursive-include docs Makefile
 
-global-exclude *.pyc
-
-# added by check_manifest.py
+recursive-include src *.py
 recursive-include doc *.py
 recursive-include doc *.rst
 recursive-include doc Makefile
+recursive-include src *.txt
+recursive-include src *.zcml
