--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "4dceff2f"
+commit-id = "b21fbbf2"
 
 [python]
 with-windows = false
@@ -20,6 +20,7 @@ fail-under = 100
 
 [manifest]
 additional-rules = [
+    "include *.yaml",
     "recursive-include doc *.py",
     "recursive-include doc *.rst",
     "recursive-include doc Makefile",
